--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 header {
     width: 100%;
     /* height: 100px; */
-    background: black;
+    background: rgb(58, 67, 71);
     text-align: center;
 }
 
@@ -22,6 +22,8 @@ h1 {
     padding-top: 15px;
     color: white;
     padding-bottom: 15px;
+    font-weight: 700;
+    font-size: 3.5em;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -42,14 +44,14 @@ h1 {
 
 #sidebar {
     height: 100%;
-    background: blue;
+    background: rgb(234, 238, 241);
     padding: 15px;
 }
 
 #main {
     height: 100%;
-    background: red;
-    padding: 0;
+    background: white;
+    padding: 15px;
 }
 
 .search_bar {
@@ -66,12 +68,20 @@ h1 {
     width: calc(100% - 50px);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
+    border: 1px solid grey;
+    height: 40px;
 }
 
 .search_bar>button {
     width: 50px;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
+    border: 1px solid grey;
+    border-left: none;
+    height: 40px;
+    background: rgb(24, 115, 235);
+    color: white;
+    font-size: 20px;
 }
 
 .search_list {
@@ -84,8 +94,14 @@ h1 {
 }
 
 .search_list>.search_item {
-    padding: 5px 0px 5px 15px;
+    padding: 15px;
     border-bottom: 1px solid grey;
     display: block;
     margin: 0;
+    font-weight: 250;
 }
+
+.search_item:hover {
+    font-weight: bold;
+}
+
