--- a/style.css
+++ b/style.css
@@ -166,10 +166,28 @@ h1 {
 }
 
 .day p {
-    margin: 0;
+    margin: 0 auto;
     text-align: center;
+    padding-top: 12px;
+}
+
+#day_header p {
+    padding-top: 0px;
 }
 
 .border-top {
     border-top: 1px solid lightgray;
+}
+
+img {
+    height: 50px;
+    width: 50px;
+    margin-left: 15px;
+}
+
+span {
+    padding: 0px 10px;
+    margin-top: 12px;
+    display: block;
+    text-align: center;
 }
