--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* general ========================== */
+
 * {
     box-sizing: border-box;
 }
@@ -9,6 +11,23 @@ body {
     width: 100%;
     height: 100%;
 }
+
+.container {
+    height: 100%;
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+    background: yellow;
+    margin: auto;
+}
+
+.row {
+    height: 100%;
+    margin: 0;
+}
+
+/* header ========================== */
 
 header {
     width: 100%;
@@ -27,20 +46,7 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.container {
-    height: 100%;
-    width: 100%;
-    max-width: 100%;
-    margin: 0;
-    padding: 0;
-    background: yellow;
-    margin: auto;
-}
-
-.row {
-    height: 100%;
-    margin: 0;
-}
+/* sidebar =============================== */
 
 #sidebar {
     height: 100%;
@@ -48,10 +54,16 @@ h1 {
     padding: 15px;
 }
 
-#main {
-    height: 100%;
-    background: white;
-    padding: 15px;
+#clear_btn {
+    background: rgb(252, 212, 139);
+    margin-bottom: 10px;
+    width: 100%;
+    border: 1px solid grey;
+    border-radius: 5px;
+}
+
+#clear_btn:hover {
+    background: orange;
 }
 
 .search_bar {
@@ -63,6 +75,7 @@ h1 {
     display: flex;
 
 }
+
 
 .search_bar>input {
     width: calc(100% - 50px);
@@ -103,6 +116,14 @@ h1 {
 
 .search_item:hover {
     font-weight: bold;
+}
+
+/* main ========================== */
+
+#main {
+    height: 100%;
+    background: white;
+    padding: 15px;
 }
 
 .results_list {
